[package]
name = "gakona"
version = "0.4.0"
authors = ["nick <scifi6546@protonmail.com>"]
edition = "2018"
description="A simple database for storing metadata about files"
license="GPL-3.0-or-later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gulkana="^1.0.0"
rand="0.7.2"
